Revert "Fix alignment of page-edit and page-infos in page header"
This reverts commit 3a6357ff28d4dd712c6e3c080e61427bb5be9c4a.

--- a/resources/stylesheets/component/common/pageheader.page-infos.less
+++ b/resources/stylesheets/component/common/pageheader.page-infos.less
@@ -1,39 +1,23 @@
 .bs-page-info-element {
-	max-width: 52%;
-	width: 100%;
-	line-height: 0.875em;
+	max-width: 50%;
 
 	& > ul {
 		list-style:none;
 		margin-bottom: 0;
 		padding-left:0;
-		max-width: 100%;
+		min-width: 100%;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: flex-end;
 
 		& > li {
+			line-height: 1.1rem;
 			height: max-content;
-			max-width: 100%;
-			width: auto;
-			margin-left: 0.3125em;
-			margin-bottom: 0.625rem;
-
-			& > ul {
-				max-width: 100%;
-				padding-left: 0;
-				display: flex;
-				flex-wrap: wrap;
-				}
-			}
 		}
-
-	.bs-page-info-element-text-col {
-		display: block;
-		max-width: 95%;
 	}
 
-	.bs-page-info-element-button-col {
+	.bs-page-info-element-button-col,
+	.bs-page-info-element-text-col {
 		display: inline-block;
 	}
 
@@ -45,8 +29,8 @@
 			font-family: icomoon;
 			content: "\e9a6";
 			font-style: normal;
-			margin-right: 0.3125em;
-			margin-left: 0;
+			margin-right: 0.3125rem;
+			margin-left: 1rem;
 		}
 
 		&:hover,
@@ -83,8 +67,8 @@
 			&::before {
 				font-family: 'fontawesome';
 				content: "\f0d7";
-				margin-left: 0.1875em;
-				margin-right: 0.1875em;
+				margin-left: 0.1875rem;
+				margin-right: 0.1875rem;
 			}
 		}
 
@@ -98,10 +82,10 @@
 					a {
 						display: block;
 						width: 100%;
-						min-height: 1.875em;
-						line-height: 1.875em;
-						padding-left: 0.3125em;
-						padding-right: 0.3125em;
+						min-height: 1.875rem;
+						line-height: 1.875rem;
+						padding-left: 0.3125rem;
+						padding-right: 0.3125rem;
 
 						&:hover {
 							text-decoration: none;
@@ -113,7 +97,7 @@
 	}
 
 	.bs-page-watch {
-		min-width: 5em;
+		min-width: 5rem;
 
 		a {
 			color: @link-color;
